--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: benchmark-artifact
+          run-id: 13559452164
         continue-on-error: true
 
       - name: Display structure of downloaded files
