--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,19 +15,56 @@ jobs:
     name: Run Go benchmark example
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout main repository
+        uses: actions/checkout@v4
+        with:
+          path: main-repo
+
+      - name: Checkout benchmark branch
+        uses: actions/checkout@v4
+        with:
+          ref: yorkie-ci-benchmark
+          path: benchmark-repo
+        continue-on-error: true
+
+      - name: Check previous benchmark results
+        run: |
+          if [ -d "benchmark-repo" ] && [ -f "benchmark-repo/output.txt" ]; then
+            echo "Previous benchmark results found:"
+            echo "----------------------------------------"
+            cat benchmark-repo/output.txt
+            echo "----------------------------------------"
+          else
+            echo "No previous benchmark results found."
+          fi
+
       - uses: actions/setup-go@v4
         with:
           go-version: "stable"
-      - name: Run benchmark
-        run: go test -bench 'BenchmarkFib' | tee output.txt
 
-      - name: Compare benchmark data
-        uses: benchmark-action/github-action-benchmark@v1
-        with:
-          name: Go Benchmark
-          tool: "go"
-          output-file-path: output.txt
-          fail-on-alert: true
-          comment-always: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run benchmark
+        run: |
+          cd main-repo
+          go test -bench 'BenchmarkFib' | tee output.txt
+
+      - name: Save benchmark results
+        run: |
+          mkdir -p benchmark-repo
+          cp main-repo/output.txt benchmark-repo/
+          cd benchmark-repo
+
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+          if [ ! -d ".git" ]; then
+            git init
+            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          fi
+
+          git add output.txt
+          TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          git diff --staged --quiet || git commit -m "Update benchmark results at $TIMESTAMP [skip ci]"
+          git checkout -B yorkie-ci-benchmark
+          git push -f origin yorkie-ci-benchmark
+
+          echo "Benchmark results have been pushed to yorkie-ci-benchmark branch"
